--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                         <div class="cube-face bottom"><i class="fas fa-life-ring"></i></div>
                     </div>
                 </div>
-                <p class="animate__animated animate__fadeInUp" data-animate-delay="0.4s">Au cœur de notre démarche, la ville d'El Jadida, activement engagée dans la préparation face aux risques marins. L'initiative "Tsunami Ready" de l'UNESCO, que nous soutenons, est cruciale pour renforcer cette résilience par l'information et l'éducation ciblée.</p>
+                <p class="animate__animated animate__fadeInUp" data-animate-delay="0.4s">Au cœur de notre démarche, la ville d'El Jadida, activement engagée dans la préparation face aux risques marins. L'initiative "Tsunami Ready" de l'UNESCO, est cruciale pour renforcer cette résilience par l'information et l'éducation ciblée.</p>
                 <p class="animate__animated animate__fadeInUp" data-animate-delay="0.6s">Notre projet vidéo s'inscrit directement dans cette vision : un outil créé pour et avec la communauté d'El Jadida.</p>
                 <img src="img/portugueuse-city-mazagan-eljadida.jpg" alt="Panorama côte d'El Jadida" class="slide-image animate__animated animate__fadeInUp" data-animate-delay="0.8s" style="max-height: 240px;">
             </div>
@@ -1138,7 +1138,7 @@
                     <li><strong>Impact Visuel Fort :</strong> Captiver l'attention des jeunes esprits avec des personnages attachants comme Youssef et son Oncle Ahmed, et une narration immersive.</li>
                     <li><strong>Clarté et Simplicité :</strong> Rendre accessibles des informations complexes et potentiellement anxiogènes grâce à un langage visuel adapté et rassurant.</li>
                     <li><strong>Mémorisation Facilitée :</strong> Ancrer durablement les consignes de sécurité par la force de l'image, du son et de l'émotion positive.</li>
-                    <li><strong>Ancrage Culturel Authentique :</strong> Utilisation de l'Arabe et de références locales pour une résonance et une identification immédiates et profondes.</li>
+                    <li><strong>Ancrage Culturel Authentique :</strong> Utilisation de l'Arabe et des références simples pour une résonance et une identification immédiates et profondes.</li>
                 </ul>
                 <div style="margin-top: 25px; display: flex; justify-content: center; gap: 40px;" class="animate__animated animate__fadeInUp" data-animate-delay="0.4s">
                     <div class="animate-float">
@@ -1194,7 +1194,7 @@
         <section class="slide content-slide" id="slide6">
             <div class="slide-content staggered-animation">
                 <h2 class="animate__animated animate__fadeInDown">Un Écosystème Collaboratif pour un Impact Maximal</h2>
-                <p class="animate__animated animate__fadeInUp" data-animate-delay="0.2s">Conçu et réalisé par Mhaidrat Abdelhakim et Pr. Elkhalidi Khalid, ce projet bénéficie du soutien scientifique et institutionnel de l'Université Chouaib Doukkali (Laboratoire LGESS), garantissant sa rigueur et sa pertinence.</p>
+                <p class="animate__animated animate__fadeInUp" data-animate-delay="0.2s">Conçu et réalisé par Mhaidrat Abdelhakim et Pr. Elkhalidi Khalid, ce projet bénéficie du soutien scientifique et institutionnel de l'Université Chouaib Doukkali (Laboratoire LGMSS), garantissant sa rigueur et sa pertinence.</p>
                 <p class="animate__animated animate__fadeInUp" data-animate-delay="0.4s">Notre action est en parfaite synergie avec les programmes internationaux de l'UNESCO-IOC : le projet CoastWAVE et l'initiative Tsunami Ready, visant à faire d'El Jadida une communauté exemplaire en matière de résilience côtière.</p>
                 
                 <div class="logos-container animate__animated animate__fadeInUp" data-animate-delay="0.6s" style="margin-top: 25px; margin-bottom: 25px; gap: 20px;">
@@ -1267,7 +1267,7 @@
                 <img src="https://placehold.co/150x150/FFC400/2C3E50?text=شكرا&font=poppins" alt="Icône Remerciement en Arabe" class="thank-you-icon animate__animated animate__pulse" data-animate-delay="0.1s" data-animate-duration="2s" data-animate-iteration="infinite">
                 <h2 class="animate__animated animate__fadeInDown" data-animate-delay="0.2s">Choukran Jazilan ! Merci pour Votre Attention.</h2>
                 <p class="animate__animated animate__fadeInUp" data-animate-delay="0.4s" style="font-size: 1.2em;">Nous tenons à exprimer notre profonde gratitude au Forum de la Mer et aux organisateurs du concours SeaLab pour cette formidable reconnaissance et cette opportunité unique.</p>
-                <p class="animate__animated animate__fadeInUp" data-animate-delay="0.6s" style="font-size: 1.2em;">Un grand merci également à nos partenaires, à l'Université Chouaib Doukkali, au laboratoire LGESS, et à tous ceux qui ont cru en ce projet et l'ont soutenu avec passion.</p>
+                <p class="animate__animated animate__fadeInUp" data-animate-delay="0.6s" style="font-size: 1.2em;">Un grand merci également à l'Université Chouaib Doukkali et au laboratoire LGESS pour l'environnement académique qui a rendu ce travail possible. Nous saluons tout particulièrement la vision et les efforts constants du Professeur Elkhalidi Khalid pour faire d'El Jadida une ville 'Tsunami Ready' et pour promouvoir l'éducation aux risques auprès de tous, y compris les plus jeunes, une démarche qui inspire profondément ce projet. Merci enfin à tous ceux qui ont cru en cette initiative et l'ont soutenue.</p>
                 <div class="inspirational-quote animate__animated animate__fadeInUp" data-animate-delay="0.8s" style="margin-top: 30px; background-color: var(--primary-light); border-left-color: var(--primary-color);">
                     <p style="color: var(--primary-color);">Nous sommes maintenant à votre entière disposition pour répondre à vos questions et échanger sur ce projet qui nous tient à cœur.</p>
                 </div>
